 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 * $Id$
 */

TreeTank 4.14
-------------
+ Added notion of reference key as multipurpose key.
+ Added lots of test cases.
+ Binary incompatibility because fulltext root node takes key 1.
+ Added hooks for fulltext index
  (FullTextRootNode, FullTextNode, and FullTextAttributeNode).
+ Session and transaction tracks close state to prevent access after close.
+ Allow multiple commit() and abort() calls before close().
+ Split IWriteTransaction semantics: now use [commit|abort]() AND close().
+ Fixed bug in axis classes performing tests.
+ Removed checked exceptions from IWriteTransaction exception for commit()
  which must throw an IOException in case the writing to the file failed.

TreeTank 4.13
-------------
+ Binary incompatibility to previous releases due to stored version info.
+ File now storing whether it is checksummed and encrypted.
+ File now storing the version number of TreeTank with which it was created.
+ Moved Axis classes to axislayer package.
+ Fixed bug with remove() in IWriteTransaction. Now also deleting
  descendants.
+ SAXGenerator bug fixed.
+ SAXGenerator now accepting IAxis as input for more convenience.
+ IAxis makes its transaction available to the public.
+ IAxis now public API and can be used instead of Iterable<INode>.
+ Made Node, Page, and Axis abstract and renamed them accordingly.
 
TreeTank 4.12
-------------
+ Added pagelayer and moved all nodes there.
+ Binary incompatibility to previous releases due to pagelayer changes.
+ IWriteTransaction now comes with insertElementAs... and insertTextAs...
+ Major rework of pagelayer. Node is split into Document, Element, and Text.